[fix] header text-overflow

--- a/src/docs/core.less
+++ b/src/docs/core.less
@@ -93,6 +93,12 @@ nav {
   body {
     margin: 0 8px;
   }
+  header {
+    font-size: 1.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   #main,
   #expand {
     display: block;
